# thaleia

./: .gitignore  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
app/: .env.example  Dockerfile  manage.py  pyproject.toml  pyright.json  ruff.toml
app/api/: views.py
app/thaleia/: asgi.py  settings.py  urls.py  wsgi.py
db/: Dockerfile
docker/app/: Dockerfile
